wzquresh first commit added wzquresh activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,11 @@
             android:label="@string/gpcorser">
         </activity>
 
+        <activity
+            android:name=".wzquresh"
+            android:label="@string/wzquresh">
+        </activity>
+
 
     </application>
 
